--- a/pavyzdys/kursinis-piratines-radijo-stotys.tex
+++ b/pavyzdys/kursinis-piratines-radijo-stotys.tex
@@ -22,9 +22,9 @@
 	
 % **Referato lape** pateikiamas bibliografinis kursinio darbo aprašas (lygia greta nurodomas jo pavadinimas anglų kalba), pagrindiniai žodžiai (lietuvių, anglų kalba) ir kursinio darbo santrauka (lygiagretus tekstas lietuvių ir anglų kalba).
 
-Šis kursinis darbas analizuoja nelegalių („piratinių“) radijo stočių istoriją, dabartį, atskirus jų tipus, motyvus transliuoti šiuo būdu ir nelegalių transliacijų pasekmes.
+Šis kursinis darbas analizuoja nelegalių (piratinių) radijo stočių istoriją, dabartį, atskirus jų tipus, motyvus transliuoti šiuo būdu ir nelegalių transliacijų pasekmes.
 
-Aptariamos pirmosios (ankstyvosios) nelegaliai transliuojamos ofšorinės radijo stotys Europoje (Didžiojoje Britanijoje bei Skandinavijoje), jų padaryta įtaka radijo industrijai. Taip pat nagrinėjami dabartinių „piratinių“ radijo stočių veiklos metodai, jų konfliktas su radijo ryšį reguliuojančiomis įstaigomis.
+Aptariamos pirmosios (ankstyvosios) nelegaliai transliuojamos ofšorinės radijo stotys Europoje (Didžiojoje Britanijoje bei Skandinavijoje), jų padaryta įtaka radijo industrijai. Taip pat nagrinėjami dabartinių piratinių radijo stočių veiklos metodai, jų konfliktas su radijo ryšį reguliuojančiomis įstaigomis.
 
 Apžvelgiami kelios skirtingos motyvacijos organizuoti nelegalias radijo transliacijas (komercinis motyvas Didžiojoje Britanijoje, pilietinis bei taikdariškas motyvas Jungtinėse Amerikos Valstijose ir Izraelyje, karinis motyvas įvairių valstybių atžvilgiu). Svarstoma, ar nelegalios radijo transliacijos išnyks išpopuliarėjus internetinei erdvei.
 
@@ -32,11 +32,11 @@ Apžvelgiami kelios skirtingos motyvacijos organizuoti nelegalias radijo transli
 
 \begin{vukfAbstractEn}
 
-This study analyzes a case of illegal (non--licensed) radio broadcasting („pirate radios“). The study reviews the „pirate radio“ history, discusses a contemporary „pirate radio“, attempts to showcase different types of such radio stations, reviews various actual motives for broadcasting such a type of a radio station, and also pinpoints consequences of broadcasting illegally.
+This study analyzes a case of illegal (non--licensed) radio broadcasting (pirate radios). The study reviews the pirate radio history, discusses a contemporary pirate radio, attempts to showcase different types of such radio stations, reviews various actual motives for broadcasting such a type of a radio station, and also pinpoints consequences of broadcasting illegally.
 
-The first illegal offshore radio stations in Europe, mainly in Great Britain and the Scandinavia region, are described, the influence made my them to the whole radio industry is discussed. Also, the inner workings of a contemporary British „pirate radio“ as well as the conflict between the illegal radio station and the radio wave regulator is analyzed.
+The first illegal offshore radio stations in Europe, mainly in Great Britain and the Scandinavia region, are described, the influence made my them to the whole radio industry is discussed. Also, the inner workings of a contemporary British pirate radio as well as the conflict between the illegal radio station and the radio wave regulator is analyzed.
 
-In the study, several different motivations of running a „pirate radio“ are described, including a commercial motive in Great Britain, „public spirited“ and peace--making motive in US and Israel, and a military motive among various nations. A possible future for illegal radio broadcasting in the advent of the internet is discussed.
+In the study, several different motivations of running a pirate radio are described, including a commercial motive in Great Britain, „public spirited“ and peace--making motive in US and Israel, and a military motive among various nations. A possible future for illegal radio broadcasting in the advent of the internet is discussed.
 
 \end{vukfAbstractEn}
 
@@ -60,35 +60,37 @@ In the study, several different motivations of running a „pirate radio“ are 
 
 % **Įvade** pristatoma darbo tema, aptariamas ir pagrindžiamas darbo aktualumas, nurodomas kursinio darbo tikslas ir uždaviniai, pristatomi darbe panaudoti tyrimo metodai, apibendrintai aptariama literatūra, atskleidžiama darbo struktūra. Rekomenduojama įvado apimtis – 5–10 proc. kursinio darbo apimties.
 
-Kursinio darbo tema – nelegaliai transliuotos ir transliuojamos radijo stotys, dažnai paprasčiau vadinamos „piratinėmis radijo stotimis“. Šis kursinis darbas yra istoriografinio pobūdžio.
+Kursinio darbo tema – nelegaliai transliuotos ir transliuojamos radijo stotys, dažnai paprasčiau vadinamos piratinėmis radijo stotimis.
 
-Darbe analizuojamos priežastys transliuoti nelegaliai; aptariami ankstyviausi, žymiausi (Didžiojoje Britanijoje) bei išskirtiniai (Jungtinėse Amerikos Valstijose, Izraelyje) „piratinių“ radijo stočių atvejai. Taip pat nagrinėjami atvejai, kuomet „piratais“ būdavo ne pavieniai privatūs asmenys ar įmonės, bet valstybės („slaptųjų radijų“ atveju). Aptariama ir galima „piratinių“ radijo stočių plėtra (ar persikėlimas) į interneto erdvę.
+Darbe analizuojamos priežastys transliuoti nelegaliai; aptariami ankstyviausi, žymiausi (Didžiojoje Britanijoje) bei išskirtiniai (Jungtinėse Amerikos Valstijose, Izraelyje) piratinių radijo stočių atvejai. Taip pat nagrinėjami atvejai, kuomet „piratais“ būdavo ne pavieniai privatūs asmenys ar įmonės, bet valstybės („slaptųjų radijų“ atveju). Aptariama ir galima piratinių radijo stočių plėtra (ar persikėlimas) į interneto erdvę.
 
 Nelegalių radijo transliacijų tema aktuali ir tyrėjams, nagrinėjantiems medijų sąsają su žodžio laisve, ir entuziastams, kuriuos masina pasipriešinimo „sistemai“ (angl. \emph{establishment}) tema.\\
 
-\textbf{Kursinio darbo tikslas}: išanalizuoti nelegaliai transliuojamų („piratinių“) radijo stočių atsiradimą, raidą, ištirti jų raidos dėsningumus.\\
+\textbf{Kursinio darbo tikslas}: išanalizuoti nelegaliai transliuojamų (piratinių) radijo stočių atsiradimą, raidą, ištirti jų raidos dėsningumus.\\
 
 \textbf{Kursinio darbo uždaviniai}:
 
 \begin{itemize}
 	\item išanalizuoti nelegalių radijo transliacijų raidą, rasti sąsajas tarp skirtingų laikotarpių, dėsningumą ir tęstinumą;
 	\item kategorizuoti nelegalias radijo transliacijas į atskirus tipus pagal transliuotojus ir jų motyvus;
-	\item nustatyti faktinius motyvus vykdyti nelegalias radijo transliacijas įvairiomis sąlygomis;
+	\item nustatyti motyvus vykdyti nelegalias radijo transliacijas įvairiomis sąlygomis;
 	\item įvardinti žalą, kurią sukelia nelegalios radijo transliacijos.
 \end{itemize}
 
-„Piratinės“ radijo stotys daugiausia analizuotos tų šalių, kuriuose jos labiausiai buvo arba yra paplitusios, mokslininkų – Didžiosios Britanijos, JAV, Izraelio. Vis dėlto, įdomią ir intriguojančią temą plačiai aprašė (parodė) žiniasklaida bei nepriklausomi tyrėjai – referuojami ir tokio tipo šaltiniai.
+Piratinės radijo stotys daugiausia analizuotos tų šalių, kuriuose jos labiausiai buvo arba yra paplitusios, mokslininkų – Didžiosios Britanijos, JAV, Izraelio. Vis dėlto, įdomią ir intriguojančią temą plačiai aprašė (parodė) žiniasklaida bei nepriklausomi tyrėjai – referuojami ir tokio tipo šaltiniai.
+
+Šis kursinis darbas yra istoriografinio pobūdžio. Jame daugiausia remiamasi Robert Chapman knyga „Selling the Sixties: The Pirates and Pop Music Radio“, Sean Street darbu „Crossing the Ether: British Public Service Radio and Commercial Competition 1922-1945“, Christopher H. Sterling redaguojama „Encyclopedia of Radio“, Carole Fleming „The Radio Handbook“, straipsniais žurnaluose, radijo ir televizijos reportažais. Autoriaus žiniomis, piratinių radijų tema Lietuvoje iki šiol netyrinėta ir neaprašyta; tikimasi, kad šis darbas paskatins tolesnes nelegalių transliacijų studijas.
 
 
 \section{Apibrėžimas ir termino kilmė}
 
 Piratinio radijo apibrėžimas tirtoje literatūroje dažnai nėra konkretus, tikslus ir vienodas.
 
-Pavyzdžiui, Hugh Chignell, Bournemouth universiteto Didžiojoje Britanijoje profesorius ir knygos „Key Concepts in Radio Studies“ autorius „piratinį radiją“ apibrėžia kaip \emph{„nelicencijuotą radijo stotį, kurios sąvoka daugiausia yra istoriškai susijusi su ofšorinėmis radijo transliacijomis Britanijoje 20 amžiaus 7--ajame dešimtmetyje“} \cite[p.~137]{hc_key_concepts_in_radio_studies}. Kita autorė, Carole Fleming, knygoje „The Radio Handbook“ piratinį radiją taip pat apibūdina tiesiog kaip \emph{„nelicencijuotą, nelegalų transliavimą“} \cite[p.~35]{cf_the_radio_handbook}. Panašus apibrėžimas yra nurodytas ir Christopherio H. Sterlingo redaguojamoje „Radijo enciklopedijoje“ („Encyclopedia of Radio“): \emph{„Piratinis radijas yra terminas, skirtas apibūdinti stotis, kurios transliuoja be vyriausybės sutikimo“} \cite[p.~237]{chs_encyclopedia_of_radio}. „Continuum encyclopedia of popular music of the world“ skyrelyje apie „piratinį radiją“ rašo: \emph{„nelegalių radijo transliacijų sinonimas“} \cite[p.~447]{js_continuum_encyclopedia}.
+Pavyzdžiui, Hugh Chignell piratinį radiją apibrėžia kaip \emph{„nelicencijuotą radijo stotį, kurios sąvoka daugiausia yra istoriškai susijusi su ofšorinėmis radijo transliacijomis Britanijoje 20 amžiaus 7--ajame dešimtmetyje“} \cite[p.~137]{hc_key_concepts_in_radio_studies}. Kita autorė, Carole Fleming, knygoje „The Radio Handbook“ piratinį radiją taip pat apibūdina tiesiog kaip \emph{„nelicencijuotą, nelegalų transliavimą“} \cite[p.~35]{cf_the_radio_handbook}. Panašus apibrėžimas yra nurodytas ir Christopherio H. Sterlingo redaguojamoje „Radijo enciklopedijoje“ („Encyclopedia of Radio“): \emph{„Piratinis radijas yra terminas, skirtas apibūdinti stotis, kurios transliuoja be vyriausybės sutikimo“} \cite[p.~237]{chs_encyclopedia_of_radio}. „Continuum encyclopedia of popular music of the world“ skyrelyje apie piratinį radiją rašo: \emph{„nelegalių radijo transliacijų sinonimas“} \cite[p.~447]{js_continuum_encyclopedia}.
 
-Geriausią aptiktą apibrėžimą įvardino Sean Street, kitas Bournemouth universiteto profesorius, kuris piratinį radiją savo darbe „Crossing the Ether: British Public Service Radio and Commercial Competition“ apibūdino kaip \emph{„garso transliavimo formą, pažeidžiančią (transliacijų) licencijavimo reguliavimą (taisykles) arba valstybėje, iš kurios transliuojama, arba valstybėje, į kurią transliuojama, arba abiejose.“} \cite[p.206]{ss_crossing_the_ether_british_public_service_radio_and_commercial_competition}. Šis „piratinio radijo“ apibrėžimas yra diskrečiausias, tiksliausias ir išsamiausias nagrinėtoje literatūroje, taigi kursinio darbo autorius toliau remsis juo.
+Išsamiausią ir diskrečiausią aptiktą apibrėžimą įvardino Sean Street, kuris piratinį radiją savo darbe „Crossing the Ether: British Public Service Radio and Commercial Competition“ apibūdino kaip \emph{„garso transliavimo formą, pažeidžiančią (transliacijų) licencijavimo reguliavimą (taisykles) arba valstybėje, iš kurios transliuojama, arba valstybėje, į kurią transliuojama, arba abejose.“} \cite[p.206]{ss_crossing_the_ether_british_public_service_radio_and_commercial_competition}. Šis piratinio radijo apibrėžimas yra diskrečiausias, tiksliausias ir išsamiausias nagrinėtoje literatūroje, taigi kursinio darbo autorius toliau remsis juo.
 
-Patogumo ir trumpumo dėlei, šiame darbe nelegaliai transliuojamos radijo stotys bus vadinamos ne tokiu formaliu terminu – „piratinėmis radijo stotimis“ arba tiesiog „piratiniais radijais“.
+Patogumo ir trumpumo dėlei, šiame darbe nelegaliai transliuojamos radijo stotys bus vadinamos ne tokiu formaliu terminu – \emph{piratinėmis radijo stotimis}, arba tiesiog \emph{piratiniais radijais}.
 
 Tai, kad neteisėtai transliuojamas radijas vadinamas „piratiniu“, reikėtų sieti su tuo, kad pirmosios neteisėtos transliacijos vyko iš laivų, nuplaukusių už valstybės jūrinės sienos į tarptautinius vandenis \cite[p.~447]{js_continuum_encyclopedia}.
 
@@ -175,7 +177,7 @@ Ankstyvosios piratinės radijo stotys Britanijoje gyvavo neilgai, bet suspėjo p
 
 \begin{itemize}
 	\item \gls{BBC} radijo stočių eteryje buvo pradėta transliuoti populiarioji (ne vien tradicinė) muzika, įkurta „\gls{BBC} Radio One“ radijo stotis.
-	\item Buvo suprasta, kad radijo stoties eteryje galima kalbėti ne vien „kruopčiai artikuliuota bendrine anglų kalba“ \cite[p.~238]{chs_encyclopedia_of_radio}, bet ir smagiau, gyviau, improvizuoti.
+	\item Buvo suprasta, kad radijo stoties eteryje galima kalbėti ne vien „kruopčiai artikuliuota bendrine anglų kalba“ \cite[p.~238]{chs_encyclopedia_of_radio}, bet ir smagiai, gyvai plepėti, improvizuoti.
 	\item Pirmosioms Britanijos piratininėms radijo stotims reikia dėkoti ir už popmuzikos išpopuliarinimą Europos radijo stočių eteriuose \cite[p.~447]{js_continuum_encyclopedia}.
 \end{itemize}
 
@@ -184,7 +186,7 @@ Ankstyvosios piratinės radijo stotys Britanijoje gyvavo neilgai, bet suspėjo p
 
 Nuo septintojo dešimtmečio vidurio, kuomet komercinės ofšorinės piratinės radijo stotys buvo uždraustos Britanijoje, prasidėjo antroji „piratų“ karta – naujieji piratiniai radijai dažniausiai transliavo jau nebe iš jūros, o iš sausumos. Taip pat transliacijų motyvai buvo kitokie \cite[p.~448]{js_continuum_encyclopedia} – pavyzdžiui, „antrosios kartos“ Didžiosios Britanijos „piratai“ transliavo regį, hiphopą ir kitokią „juodųjų muziką“, kurią ignoravo arba apskritai draudė \gls{BBC} ir komerciniai transliuotojai \cite[p.~447]{js_continuum_encyclopedia}.
 
-Šiuolaikinės (21--ojo amžiaus) piratinės radijo stotys Didžiojoje Britanijoje nebėra tokios didelės sklaidos ar populiarumo, kokios buvo ankstyvosios – jos dažniausiai transliuojamos vien kuriame nors mieste ar miestelyje, taip pat dažnai būna skirtos tik kuriam nors vienam socialiniam sluoksniui (etinei mažumai) – išeiviams iš kurios nors vienos valstybės ar kalbėtojams viena kuria nors konkrečia kalba. Dalis iš jų veikia tik savaitgaliais \cite[p.~238]{chs_encyclopedia_of_radio}.
+Šiuolaikinės (21--ojo amžiaus) piratinės radijo stotys Didžiojoje Britanijoje nebėra tokios didelės sklaidos ar populiarumo, kokios buvo ankstyvosios – jos dažniausiai transliuojamos vien kuriame nors mieste ar miestelyje, taip pat dažnai būna skirtos tik kuriam nors vienam socialiniam sluoksniui (etinei mažumai) – išeiviams iš kurios nors vienos valstybės ar tiems, kurie kalba viena iš užsienio kalbų. Dalis iš jų veikia tik savaitgaliais \cite[p.~238]{chs_encyclopedia_of_radio}.
 
 Daugiausia piratinių radijo stočių Didžiojoje Britanijoje šiuo metu\footnote{2011 m.} yra didžiuosiuose miestuose – Londone, Birmingeme, Lydse ir Mančesteryje \cite{ofcom_illegal_broadcasting_factsheet}. Pasak \gls{Ofcom} statistikos, 2010 m. Didžiojoje Britanijoje buvo apie 150 nelegalių radijo stočių. Taip pat – 16\% Londono gyventojų reguliariai jų klausėsi \cite{bbc_radio_4_do_pirates_rule_the_air_waves}. \gls{Ofcom} mano, kad šiandien \footnote{Radijo laida transliuota 2010 m.} apie 16\% Londono gyventojų klausosi piratinių radijo stočių transliacijų \cite{bbc_radio_4_do_pirates_rule_the_air_waves}.
 
@@ -208,17 +210,17 @@ Papildomas būdas, kuriuo „piratai“ saugosi nuo policijos pareigūnų, yra t
 
 \section{„Mikroradijas“ JAV}
 
-Nors Jungtinėse Valstijose yra ir „įprastų“ komercinių arba mėgėjiškų piratinių radijo stočių, įdomesnis ir vien šiam regionui priskirtinas nelegalių transliacijų tipas yra vadinamieji „mikroradijai“. „Mikroradijas“ (angl. \emph{micro radio}) yra Jungtinėse Amerikos Valstijose (JAV) transliuojamos nelicencijuotos mažo galingumo radijo stotys, kuriomis skleidžiama „alternatyvi žinutė“ \cite[p.~134]{hc_key_concepts_in_radio_studies} oficialiosioms transliacijoms. „Mikroradijai“ Jungtinėse Valstijose (skirtingai nei Didžiojoje Britanijoje) yra nekomercinio pobūdžio bei transliuoja specifinių politinių ar religinių pažiūrų turinį.
+Nors Jungtinėse Valstijose yra ir „įprastų“ komercinių arba mėgėjiškų piratinių radijo stočių, įdomesnis ir vien šiam regionui priskirtinas nelegalių transliacijų tipas yra vadinamieji „mikroradijai“. „Mikroradijas“ (angl. \emph{micro radio}) yra Jungtinėse Amerikos Valstijose (JAV) transliuojamos nelicencijuotos mažo galingumo radijo stotys, kuriomis skleidžiama „alternatyvi žinutė“ (angl. \emph{alternative message}) \cite[p.~134]{hc_key_concepts_in_radio_studies} oficialiosioms transliacijoms. „Mikroradijai“ Jungtinėse Valstijose (skirtingai nei Didžiojoje Britanijoje) yra nekomercinio pobūdžio bei transliuoja specifinių politinių ar religinių pažiūrų turinį.
 
 „Mikroradijai“ yra transliuojami iš mažo galingumo siųstuvų (100 vatų, palyginus su 1000--10000 vatų siųstuvais, naudojamais „oficialių“, komercinių radijo stočių), kuriuos galima sąlyginai nebrangiai nusipirkti arba pasigaminti pačiam.
 
 Silpnų siųstuvų, vos gyvenamųjų namų bloką arba rajoną aprėpiantis radijas JAV išpopuliarėjo devintajame dešimtmetyje \cite[p.~2]{tmc_fcc_enforcement_difficulties_with_unlicensed_micro_radio}. Populiarumas siejamas su tuo, kad komercinės radijo stotys pradėjo jungtis į konglomeratus, radijo stočių savininkų sklaida sumažėjo, kartu su tuo – ir transliuojamų nuomonių įvairovė.
 
-Nelegalios (nelicencijuotos) transliacijos Jungtinėse Valstijose, žinoma, vyko ir prieš „mikroradijų“ erą, bet patys pasigaminti siųstuvus ir transliuoti taip, kad būtų sukeliama kuo mažesnė interferencija su legaliomis radijo stotimis (t.y., kad naujasis „piratinis“ radijas būtų nors kiek girdimas), sugebėdavo tik elektroniką ar inžineriją studijavę asmenys. Vis dėlto, elektronikai ir inžinieriai į radijo stoties kūrimą žiūrėjo labiau kaip į technologinį, o ne kultūrinį uždavinį, t.y. kūrėjams buvo įdomiau kažką transliuoti apskritai, o ne transliuoti originalų, įdomų turinį, taigi piratinės radijo stotys JAV iki „mikroradijų eros“ transliavo tą pačią popmuziką, kurią buvo galima išgirsti ir legalių komercinių radijo stočių eteryje – „piratai“ nepasiūlė jokios alternatyvos. „Mikroradijų“ išpopuliarėjimas siejamas su informacijos apie siųstuvų gamybą sklaida – instrukcijas, kaip pačiam galima pasigaminti radijo siųstuvą, pradėjo spausdinti populiarūs žurnalai; medžiagas ir kabelius, reikalingus antenoms, buvo galima nusipirkti paprastose elektronikos parduotuvėse \cite[p.~37]{ay_low_power_fm_transmitters_electronics_now}.
+Nelegalios (nelicencijuotos) transliacijos Jungtinėse Valstijose, žinoma, vyko ir prieš „mikroradijo“ erą, bet patys pasigaminti siųstuvus ir transliuoti taip, kad būtų sukeliama kuo mažesnė interferencija su legaliomis radijo stotimis (t.y., kad naujasis piratinis radijas būtų nors kiek girdimas), sugebėdavo tik elektroniką ar inžineriją studijavę asmenys. Vis dėlto, elektronikai ir inžinieriai į radijo stoties kūrimą žiūrėjo labiau kaip į technologinį, o ne kultūrinį uždavinį, t.y. kūrėjams buvo įdomiau kažką transliuoti apskritai, o ne transliuoti originalų, įdomų turinį, taigi piratinės radijo stotys JAV iki „mikroradijų eros“ transliavo tą pačią popmuziką, kurią buvo galima išgirsti ir legalių komercinių radijo stočių eteryje – „piratai“ nepasiūlė jokios alternatyvos. „Mikroradijų“ išpopuliarėjimas siejamas su informacijos apie siųstuvų gamybą sklaida – instrukcijas, kaip pačiam galima pasigaminti radijo siųstuvą, pradėjo spausdinti populiarūs žurnalai; medžiagas ir kabelius, reikalingus antenoms, buvo galima nusipirkti paprastose elektronikos parduotuvėse \cite[p.~37]{ay_low_power_fm_transmitters_electronics_now}.
 
 Piratinės radijo stotys Britanijoje ir JAV skyrėsi tuo, kad pirmosios (britiškosios) transliacijas vykdė vedinos daugiausia komercinių interesų (popmuzikos ir reklamos transliacijų), o JAV analogės egzistavo vardan „audio pasipriešinimo“ \cite[p.~135]{hc_key_concepts_in_radio_studies}.
 
-Nors „mikroradijus“ vadinti piratinėmis radijo stotimis tinka pagal šiame darbe vartojamą piratinių radijų apibrėžimą, T.M. Coopman išskiria šiuos skirtumus tarp „mikroradijo“ ir istoriškai vartojamos „piratinio radijo“ sąvokos \cite[p.~3]{tmc_fcc_enforcement_difficulties_with_unlicensed_micro_radio}:
+Nors „mikroradijus“ vadinti piratinėmis radijo stotimis tinka pagal šiame darbe vartojamą piratinių radijų apibrėžimą, T.M. Coopman išskiria šiuos skirtumus tarp „mikroradijo“ ir istoriškai vartojamos piratinio radijo sąvokos \cite[p.~3]{tmc_fcc_enforcement_difficulties_with_unlicensed_micro_radio}:
 
 \begin{itemize}
 	\item „Tradicinės“ komercinės piratinės radijo stotys dažnai keičia transliacijoms naudojamą radijo bangų dažnį ir transliacijų laiką tam, kad išvengtų susekimo, o „mikroradijai“ paprastai transliuoja fiksuotu dažniu ir turi transliacijų programą.
@@ -260,13 +262,13 @@ Radijo stoties įkūrėjas pats pasigamino transliacijoms reikalingą įrangą, 
 
 Nuo 1973 m. iki praėjusio amžiaus pabaigos prie Izraelio krantų transliavo mažiausiai 8 nelegalios radijo ir televizijos stotys \cite{soundscapes_the_worlds_last_offshore_radio_stations}. Dauguma Izraelio ofšorinių radijo stočių, skirtingai nei jų analogai prie Didžiosios Britanijos krantų, saugumo sumetimais neišplaukdavo iš pačio Izraelio teritorinių krantų.
 
-Anot šaltinio \cite{offshore_radio_israel}, „piratinės“ Izraelio radijo stotys taip elgėsi dėl „nerašyto susitarimo“ tarp pačių stočių ir vyriausybės įstaigų (Gynybos ir Komunikacijos ministerijų) – valstybės karinės jūrų pajėgos privalėjo žinoti, kur yra kiekvienas Izraelio laivas ir kuo jis užsiima tam, kad lengviau identifikuotų priešiškus laivus. Kadangi tarptautiniuose vandenyse transliuojančios radijo stotys būtų buvusi didesnė problema (nes būtų buvę nebeaišku, ar kuris nors konkretus laivas vykdo ne itin reikšmingą nelegalių transliacijų nusižengimą, ar, pavyzdžiui, transportuoja ginklus), Izraelio „piratams“ buvo „leista“ vykdyti nelicencijuotas transliacijas iš nekintančių pozicijų pačio Izraelio teritorijoje.
+Anot šaltinio \cite{offshore_radio_israel}, piratinės Izraelio radijo stotys taip elgėsi dėl „nerašyto susitarimo“ tarp pačių stočių ir vyriausybės įstaigų (Gynybos ir Komunikacijos ministerijų) – valstybės karinės jūrų pajėgos privalėjo žinoti, kur yra kiekvienas Izraelio laivas ir kuo jis užsiima tam, kad lengviau identifikuotų priešiškus laivus. Kadangi tarptautiniuose vandenyse transliuojančios radijo stotys būtų buvusi didesnė problema (nes būtų buvę nebeaišku, ar kuris nors konkretus laivas vykdo ne itin reikšmingą nelegalių transliacijų nusižengimą, ar, pavyzdžiui, transportuoja ginklus), Izraelio „piratams“ buvo „leista“ vykdyti nelicencijuotas transliacijas iš nekintančių pozicijų pačio Izraelio teritorijoje.
 
 Nors beveik visose valstybėse buvo (ar yra) nelegalių transliuotojų, būtent Izraelis pasirinktas dėl ilgai gyvavusios ir unikalią įtaką padariusios radijo stoties „Voice of Peace“.
 
 \subsection{„Voice of Peace“ (Izraelis)}
 
-Piratinis radijas „Voice of Peace“ (hebr. \emph{קול השלום}, angl. \emph{„taikos balsas“}) transliacijas pradėjo 1973 m. iš Viduržemio jūros. Radijo stoties įkūrėjas – Abie Nathan, buvęs avialinijų pilotas, filantropas ir humanitaras. Transliacijos truko 20 metų – iki 1993 m., kuomet laivą „MV Peace“, naudotą transliacijoms, specialiai nuskandino pats radijo stoties įkūrėjas \cite{soundscapes_voice_of_peace} (laivas buvo nuskandintas iš finansinių sumetimų, nes buvo toks senas, kad jo niekam parduoti nebeapsimokėjo, o supjaustyti dalimis metalo laužui būtų buvę per brangu \cite{soundscapes_the_worlds_last_offshore_radio_stations}).
+Piratinis radijas „Voice of Peace“ (angl. \emph{„taikos balsas“}) transliacijas pradėjo 1973 m. iš Viduržemio jūros. Radijo stoties įkūrėjas – Abie Nathan, buvęs avialinijų pilotas, filantropas ir humanitaras. Transliacijos truko 20 metų – iki 1993 m., kuomet laivą „MV Peace“, naudotą transliacijoms, specialiai nuskandino pats radijo stoties įkūrėjas \cite{soundscapes_voice_of_peace} (laivas buvo nuskandintas iš finansinių sumetimų, nes buvo toks senas, kad jo niekam parduoti nebeapsimokėjo, o supjaustyti dalimis metalo laužui būtų buvę per brangu \cite{soundscapes_the_worlds_last_offshore_radio_stations}).
 
 Radijo stotis „Voice of Peace“ buvo įkurta su vieno iš „The Beatles“ dainininko John Lennon finansine pagalba \cite{soundscapes_talking_peace_in_new_york}. Radijo stoties įkūrėjas savo stotį naudojo „taikai Viduržemio jūros regione skleisti“ \cite{soundscapes_abie_nathans_peace_programme}. Radijo stoties eteryje, panašiai kaip ir pirmosiose piratinėse radijo stotyse prie Britanijos krantų, grota populiarioji muzika, transliuotos komercinės reklamos. Vis dėlto, radijo stotis neužmiršo savo pavadinimo ir transliuodavo politinio ir pacifistinio pobūdžio turinį: radijo stotis turėjo žinių programą, jos eteryje buvo aptariamos regiono politinės ir karinės aktualijos (paprastai – Izraelio karai su aplinkinėmis valstybėmis), telefoninio ryšio pagalba rengiamos diskusijų laidos.
 
@@ -274,14 +276,14 @@ Taip pat „Voice of Peace“ skyrėsi nuo analogių Didžiojoje Britanijoje ir 
 
 „Voice of Peace“ transliavo anglų kalba. Skirtingai nei vėliau gyvavusios piratinės radijo stotys tame pačiame regione, „Voice of Peace“ transliavo iš tarptautinių vandenų (išplaukusi iš už Izraelio teritorijos krantų).
 
-„Voice of Peace“ buvo pirmasis Izraelio komercinis radijas. Nors šiuo metu pačiame Izraelyje jau atsirado ir daugiau komercinių radijo stočių, Yaron Katz 2007 m. darbe rašo, kad šioje šalyje vis dar yra apie 100 „piratinių“ radijo stočių, kurių dauguma transliuoja religinio pobūdžio turinį (taip pat yra ir politinių radijo stočių ir stočių, skirtų atskiroms gyventojų grupėms, pvz. arabams). Kai kurioms iš klausytojų segmentų nėra legalių analogų, kuriuos šie segmentai galėtų klausyti \cite[p.389]{yk_the_other_media_alternative_communications_in_israel}.
+„Voice of Peace“ buvo pirmasis Izraelio komercinis radijas. Nors šiuo metu pačiame Izraelyje jau atsirado ir daugiau komercinių radijo stočių, Yaron Katz 2007 m. darbe rašo, kad šioje šalyje vis dar yra apie 100 piratinių radijo stočių, kurių dauguma transliuoja religinio pobūdžio turinį (taip pat yra ir politinių radijo stočių ir stočių, skirtų atskiroms gyventojų grupėms, pvz. arabams). Kai kurioms iš klausytojų segmentų nėra legalių analogų, kuriuos šie segmentai galėtų klausyti \cite[p.389]{yk_the_other_media_alternative_communications_in_israel}.
 
 
 \section{Slaptasis radijas}
 
 Labai panašus į piratinį radiją yra vadinamasis \emph{slaptasis radijas} (angl. \emph{clandestine radio}).
 
-Slaptasis radijas yra nelegalių radijo transliacijų („piratinio radijo“) porūšis, nes yra transliuojamas taip pat nelegaliai, bet nuo komercinio piratinio radijo skiriasi tuo, kad šio transliuotojai turi konkrečių politinių motyvų – slaptuoju radijumi transliuojama propaganda, palaikomos įvairios politinės grupuotės \cite[p.~334]{chs_encyclopedia_of_radio}. Slaptieji radijai paprastai palaiko sukilimus, skatina pilietinį karą, revoliucijas, pasipriešinimus. Taip pat ši radijo rūšis pasižymi tuo, kad transliuotojai dažnai bando apsimesti ne tuo, kuo esą, prisidengti kitos grupuotės vardu.
+Slaptasis radijas yra nelegalių radijo transliacijų (piratinio radijo) porūšis, nes yra transliuojamas taip pat nelegaliai, bet nuo komercinio piratinio radijo skiriasi tuo, kad šio transliuotojai turi konkrečių politinių motyvų – slaptuoju radijumi transliuojama propaganda, palaikomos įvairios politinės grupuotės \cite[p.~334]{chs_encyclopedia_of_radio}. Slaptieji radijai paprastai palaiko sukilimus, skatina pilietinį karą, revoliucijas, pasipriešinimus. Taip pat ši radijo rūšis pasižymi tuo, kad transliuotojai dažnai bando apsimesti ne tuo, kuo esą, prisidengti kitos grupuotės vardu.
 
 Slaptasis radijas yra dviejų pusių (valstybių), įsivėlusių į tarpusavio „karštąjį“ ar „šaltąjį“ karą, karinė priemonė. Taip pat slaptasis radijas dažnai (ypač karinių konfliktų metu) būna tarptautinio radijo porūšis, nes transliacijos organizuojamos ir transliuojamos iš vienos suverenios valstybės į kitą \cite[p.~749]{chs_encyclopedia_of_radio}, nors „slaptojo radijo“ transliuotojai ir neatskleidžia tikrojo skleidžiamos informacijos kūrėjo.
 
@@ -315,7 +317,7 @@ IBA taip pat nustatė sąlyginai didelius mokesčius už transliacijas, muzikos 
 Jaunimo sektorius buvo daug populiaresnis tarp reklamdavių, nes po negandų pamažu atsigaunančių Europos valstybių ekonomikos pamažu kilo, taigi jaunuoliai galėdavo išleisti daugiau pinigų laisvalaikio prekėms, intensyviau vartoti.
 
 
-\subsection{Neišnaudota „pop“ muzikos paklausa}
+\subsection{Neišnaudota popmuzikos paklausa}
 
 Pirmosios piratinės radijo stotys, veikusios iš Europos jūrų (danų „Radio Mercur“, švedų „Radio Nord“, olandų „Radio Veronica“, britų „Radio Caroline“), savo bangomis transliavo populiariąją muziką jaunajai kartai. Ypač populiarus iš žanrų buvo tuo metu (penktajame--šeštajame dešimtmečiuose) Jungtinėse Valstijose užgimęs rokenrolas.
 
@@ -327,7 +329,7 @@ Piratinės radijo stotys Europoje taip pat buvo pirmosios, kurios į šį žemyn
 
 Sarah Lockhard, neseniai (2010 m.) „legalizuotos“ piratinės radijo stoties „Rinse FM“ vadovė, laidos metu teigia, kad „oficialusis radijas visada sekė piratinį radiją“. Pasak laidos pašnekovės, oficialūs radijai visada grojo jau išpopuliarintus muzikos kūrinius ar stilius, o šitoks populiarinimas kartais gali užtrukti iki 10 metų. Pasak S. Lockhard, piratiniai radijai buvo tie, kurie išpopuliarino tai, ką dabar groja legalios radijo stotys \cite{bbc_radio_4_do_pirates_rule_the_air_waves}.
 
-\gls{Ofcom} atstovas Peter Davies tvirtina, kad oficialus reguliuotojas norėtų ne uždaryti visas „originaliasias“ piratines radijo stotis, bet to, kad šios gautų licencijas; vis dėlto, pačios piratinės radijo stotys labai nesiveržia į konkursus dėl atsilaisvinusių bangų ruožų, nes, pasak laidos pašnekovo, „tuomet jiems tenka konkuruoti su visais kitais transliuotojais“, t.y. įrodyti, kad piratai geba sukurti kokybišką ir turtingą radijo programą \cite{bbc_radio_4_do_pirates_rule_the_air_waves}.
+\gls{Ofcom} atstovas Peter Davies tvirtina, kad oficialus reguliuotojas norėtų ne uždaryti visas „originaliasias“ piratines radijo stotis, bet to, kad šios gautų licencijas; vis dėlto, pačios piratinės radijo stotys pernelyg nesiveržia į konkursus dėl atsilaisvinusių bangų ruožų, nes, pasak laidos pašnekovo, „tuomet jiems tenka konkuruoti su visais kitais transliuotojais“, t.y. įrodyti, kad piratai geba sukurti kokybišką ir turtingą radijo programą \cite{bbc_radio_4_do_pirates_rule_the_air_waves}.
 
 
 \subsection{Darbo radijuje patirtis}
@@ -383,14 +385,14 @@ Baudas už nelegalias transliacijas nustato Administracinių teisės pažeidimų
 
 \section{(Nebe)piratinis radijas internete}
 
-Vykdyti nelegalias („piratines“) transliacijas yra sudėtinga ir pavojinga veikla – privaloma išmanyti viską, nuo radijo siųstuvų veikimo bei elektroinžinerijos pagrindų iki įstatyminės bazės ir aplink siųstuvą esančios auditorijos skonio. Atrodytų, paprasčiausia išeitis būtų šiems nelegaliems radijams „išsikraustyti“ į internetą ir pradėti įstatymiškai nereguliuojamas transliacijas tiesiog ten.
+Vykdyti nelegalias (piratines) transliacijas yra sudėtinga ir pavojinga veikla – privaloma išmanyti viską, nuo radijo siųstuvų veikimo bei elektroinžinerijos pagrindų iki įstatyminės bazės ir aplink siųstuvą esančios auditorijos skonio. Atrodytų, paprasčiausia išeitis būtų šiems nelegaliems radijams „išsikraustyti“ į internetą ir pradėti įstatymiškai nereguliuojamas transliacijas tiesiog ten.
 
-Interneto įtaką vertina ir „London Pirate Sequences“ reportažo pašnekovai. Pavyzdžiui, Logan Sama, dabartinis\footnote{Reportažo filmavimo metu.} „Kiss FM“ radijo stoties\footnote{\url{http://www.totalkiss.com/}} (anksčiau buvusios „piratine“, bet legalizuotos 1990 m.) ir buvęs „Rinse FM“\footnote{\url{http://rinse.fm/}} (nuo 1994 m. transliavusių „piratų“, legalizuotų 2010 m.) didžėjus, internetą įvardina kaip turintį „papildomų patirties sluoksnių“ ir pareiškia, kad interneto pagalba „kiekvienas dabar gali turėti po piratinį radiją“ \cite{vice_london_pirate_sequences}.
+Interneto įtaką vertina ir „London Pirate Sequences“ reportažo pašnekovai. Pavyzdžiui, Logan Sama, dabartinis\footnote{Reportažo filmavimo metu.} „Kiss FM“ radijo stoties\footnote{\url{http://www.totalkiss.com/}} (anksčiau buvusios piratine, bet legalizuotos 1990 m.) ir buvęs „Rinse FM“\footnote{\url{http://rinse.fm/}} (nuo 1994 m. transliavusių „piratų“, legalizuotų 2010 m.) didžėjus, internetą įvardina kaip turintį „papildomų patirties sluoksnių“ ir pareiškia, kad interneto pagalba „kiekvienas dabar gali turėti po piratinį radiją“ \cite{vice_london_pirate_sequences}.
 
 Dalis nelegalių transliuotojų savo programas jau pertransliuoja ir internetu. Vis dėlto, nelegalios transliacijos „klasikinėmis“ radijo bangomis, net ir išpopuliarėjus internetui, neišnyko. Priežasčių reikėtų ieškoti pačių internetinių transliacijų trūkumuose \cite[p.~758]{chs_encyclopedia_of_radio}:
 
 \begin{itemize}
-	\item \textbf{Didelė konkurencija}. „Įėjimas“ į internetinių radijo transliacijų rinką yra itin paprastas, transliuoti ką nors internetu gali pradėti kiekvienas panorėjęs. Dėl šios priežasties internetinių (internetu transliuojamų) radijo stočių yra nepalyginamai daugiau nei paprastų radijo stočių, taigi naujai šios chaotiškos rinkos dalyvei („piratinei“ radijo stočiai) tenka kovoti su milžiniška konkurencija.
+	\item \textbf{Didelė konkurencija}. „Įėjimas“ į internetinių radijo transliacijų rinką yra itin paprastas, transliuoti ką nors internetu gali pradėti kiekvienas panorėjęs. Dėl šios priežasties internetinių (internetu transliuojamų) radijo stočių yra nepalyginamai daugiau nei paprastų radijo stočių, taigi naujai šios chaotiškos rinkos dalyvei (piratinei radijo stočiai) tenka kovoti su milžiniška konkurencija.
 	\item \textbf{Reklamdavių stoka}. Dėl tos pačios priežasties – per didelio pasirinkimo klausytojui – internetinis radijas nėra toks patrauklus reklamdavių tarpe. Klausytojas visada gali persijungti į kitą internetinio radijo stotį, kurio eteryje reklamos nėra.
 \end{itemize}
 
@@ -405,15 +407,15 @@ Viena iš Didžiosios Britanijos nacionalinio reguliuotojo \gls{Ofcom} regimų i
 
 % **Išvadose** suformuluojamos svarbiausios darbo išvados, pateikiamos rekomendacijos ir pasiūlymai, numatomos tolesnės temos tyrimo perspektyvos. Išvadose neturi būti pateikiama darbo santrauka. Privalomas išvadų sąsajumas su darbo tikslu. Rekomenduojama išvadų apimtis – 5–10 proc. kursinio darbo apimties.
 
-Pirmieji ir reikšmingiausi „piratiniai“ radijai Europoje įkurti praėjusio amžiaus šeštajame – septintajame dešimtmečiuose, ypač – Didžiojoje Britanijoje. „Piratinės“ transliacijos buvo pelningas verslas, bet kartu ir pasitarnavo „atnešdami“ į Europos radijo erdvę naujus muzikos stilius, formatus, supratimą apie radijo laidų vedėjus ir apskritai laisvesnį požiūrį į radiją.
+Pirmieji ir reikšmingiausi piratiniai radijai Europoje įkurti praėjusio amžiaus šeštajame – septintajame dešimtmečiuose, ypač – Didžiojoje Britanijoje. Piratinės transliacijos buvo pelningas verslas, bet kartu ir pasitarnavo „atnešdamos“ į Europos radijo erdvę naujus muzikos stilius, formatus, supratimą apie radijo laidų vedėjus ir apskritai laisvesnį požiūrį į radiją.
 
-Garsiausios šiuolaikinės „piratinės“ radijo stotys veikia didžiuosiuose Didžiosios Britanijos miestuose. „Piratai“ gerai išmano šiuolaikinę technologiją, moka slapstytis. Britų nelegalūs transliuotojai argumentuoja esantys naujų muzikos srovių ieškotojai ir populiarintojai; juos bandanti kontroliuoti įstaiga „Ofcom“ nelegalus vertina kaip nesąžiningus bei pavojingus pažeidėjus.
+Garsiausios šiuolaikinės piratinės radijo stotys veikia didžiuosiuose Didžiosios Britanijos miestuose. „Piratai“ gerai išmano šiuolaikinę technologiją, moka slapstytis. Britų nelegalūs transliuotojai argumentuoja esantys naujų muzikos srovių ieškotojai ir populiarintojai; juos bandanti kontroliuoti įstaiga „Ofcom“ nelegalus vertina kaip nesąžiningus bei pavojingus pažeidėjus.
 
 Visiškai kita linkme pasukęs „mikroradijas“ Jungtinėse Amerikos Valstijose panašiais (bet atviresniais, drąsesniais) metodais kaip Britanijoje kovoja, pasak pačių transliuotojų, su žiniasklaidos priemonių centralizacija, ir transliuoja tiems, kurie gyvena arčiausiai ir kurių problemos yra geriausiai žinomos.
 
 „Voice of Peace“ radijas Izraelyje, galbūt vienintelis, kurio valstybinės įstaigos nesistengė uždaryti, buvo gerai organizuota, 20 metų išsilaikiusi komercinė, bet nekomercinių motyvų įstaiga, skatinusi Viduržemio jūros regioną susitaikyti tarpusavyje.
 
-„Piratinių“ radijo stočių metodika „slaptųjų radijų“ pavadinimu naudota ir pačių valstybių, kariavusių tarpusavyje „šaltąjį“ arba „karštąjį“ karą ir mačiusių radijo bangas tik kaip dar vieną kanalą, kuriuo galima pulti ir gintis.
+Piratinių radijo stočių metodika „slaptųjų radijų“ pavadinimu naudota ir pačių valstybių, kariavusių tarpusavyje „šaltąjį“ arba „karštąjį“ karą ir mačiusių radijo bangas tik kaip dar vieną kanalą, kuriuo galima pulti ir gintis.
 
 Piratinės radijo stotys, nors ir apipintos romantika ir tam tikra mistika, valstybėje yra laikomos nusikaltimu. Nelegalūs transliuotojai teigia, kad radijo bangomis platina laisvą žodį ir naujausią muziką, bet iš tikrųjų trikdo svarbių (kartais – ir gyvybiškai) tarnybų darbą bei nesąžiningai elgiasi su įmonėmis, kurios naudojamą radijo bangų ruožą nusipirko už dideles lėšas.
 
