--- a/vukf.cls
+++ b/vukf.cls
@@ -1,6 +1,25 @@
 %!TEX TS-program = xelatex
 %!TEX encoding = UTF-8 Unicode
 %
+
+%% vukf.cls
+%% Copyright 2011 Linas Valiukas
+%
+% This work may be distributed and/or modified under the
+% conditions of the LaTeX Project Public License, either version 1.3
+% of this license or (at your option) any later version.
+% The latest version of this license is in
+%   http://www.latex-project.org/lppl.txt
+% and version 1.3 or later is part of all distributions of LaTeX
+% version 2005/12/01 or later.
+%
+% This work has the LPPL maintenance status `maintained'.
+% 
+% The Current Maintainer of this work is Linas Valiukas.
+%
+% This work consists of the files vukf.cls, vukfbibtex.bst and
+% vukfbibtex_nat.bst
+
 % Requires XeTeX (because of the Times New Roman font)
 %
 \NeedsTeXFormat{LaTeX2e}
